--- a/Dice game.html
+++ b/Dice game.html
@@ -23,5 +23,9 @@
 </div>
 <script src="index.js"></script>
 </body>
-<footer>    www 🎲 App Brewery 🎲 com  </footer>
+<footer>    www 🎲 App Brewery 🎲 com 
+    <img style="margin-left: 85%;width: 10%;height: 10%;border-radius: 10px;display: flex;" src="moaz.png" alt="">
+
+</footer>
+
 </html>
