--- a/Dice game.html
+++ b/Dice game.html
@@ -20,6 +20,7 @@
         <p>Player2</p>
         <img class="img2" src="dice6.png" alt="">
     </div>
+    <button>Click me to Play</button>
 </div>
 <script src="index.js"></script>
 </body>
